manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82272688" 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82272688"
  template:
    metadata:
      labels:
        app: "82272688" 
    spec:
      containers:
        - name: "82272688" 
          image: cepgstapacr.azurecr.io/82272688
          ports:
          - containerPort: 8080
