manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: "82222190"
spec:
    ports:
    - port: 8080 
    selector:
        app: "82222190"
