manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82272688-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: app-82272688.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: "82272688"
            port:
              number: 8080
        pathType: Prefix
